--- a/.github/workflows/blog-posts-workflow.yml
+++ b/.github/workflows/blog-posts-workflow.yml
@@ -1,18 +1,17 @@
-name: blog post workflow
+name: Latest blog post workflow
 on:
-    schedule:
+  schedule:
     - cron: '0 0 * * 0'
-    workflow_dispatch:
+  workflow_dispatch:
 
-    jobs:
-        update-readme-with-blog:
-            name: Update this repo's README with latest blog posts
-            runs-on: ubuntu-latest
-            steps:
-                - name: Checkout
-                uses: actions/checkout@v2
-                - name: Pull in dev.to posts
-                uses: gautamkrishnar/blog-post-workflow@master
-                with:
-                    feed_list: "https://dev.to/feed/janapc"
-
+jobs:
+  update-readme-with-blog:
+    name: Update this repo's README with latest blog posts
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Pull in dev.to posts
+        uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          feed_list: "https://dev.to/feed/janapc"
